2009-07-11  vadim  <vadim@vk.crocodile.org>

	* AddressRange.h (libfwbuilder): fixed bug #2820152: "Address
	ranges and other such need IPv4/v6 typing". AddressRange object
	should be recognized and removed from the rule if it is used in
	ipv6 rule set. To do this, add virtual method
	hasInetAddress() (should return true) to indicate that this object
	has an address. This works since virtual method getAddressPtr()
	has been implemented anyway.

	* VERSION (VERSION): started v3.0.6

2009-06-24  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getDirectionAsString): Direction
	"Undefined" is not allowed per DTD, have to assume it is "Both"
	if it is not "Inbound" or "Outbound". This is a last-minute fix
	which causes re-relase of 3.0.5

2009-06-17  vadim  <vadim@vk.crocodile.org>

	* v3.0.5 released

2009-06-09  vadim  <vadim@vk.crocodile.org>

	* NATCompiler.cpp (classifyNATRule::processNext): fixed bug
	#2803689 "NAT rule matching dport but chaning sport is broken".
	NAT rules that match destination port but translate source port
	should be possible (and the opposite too).

2009-06-08  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getDirectionAsString): should return
	string "Undefined" for the direction equal to PolicyRule::Undefined

	* NATCompiler.cpp (classifyNATRule::processNext): support for
	SDNAT rules that translate both addresses and ports.

	* NATCompiler.cpp (classifyNATRule::processNext): rules that
	translate only source port are now classified as SNAT, rules that
	translate only dest. port are classified as DNAT. Rules that try
	to translate one service type into another cause an error.

2009-06-03  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (recursiveGroupsInRE::isRecursiveGroup): fixed bug
	#2800625 "recursive groups cause infinite loop and crash in
	compiler". When a group included itself, compiler used to go
	into infinite loop and crash.

2009-05-28  vadim  <vadim@vk.crocodile.org>
