@@ -1,3 +1,10 @@
+2009-07-13  vadim  <vadim@vk.crocodile.org>
+
+	* PolicyCompiler.cpp (checkForZeroAddr::findZeroAddress): followup
+	for bug #2820152: AddressRange object has an address but no
+	netmask. Have to check for getNetmaskPtr() == NULL where
+	necessary.
+
 2009-07-11  vadim  <vadim@vk.crocodile.org>
 
 	* AddressRange.h (libfwbuilder): fixed bug #2820152: "Address
